--- a/BookOrganizer/BookOrganizer.csproj
+++ b/BookOrganizer/BookOrganizer.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -150,6 +151,12 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="edit.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo_learn_more.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="logo_learn_more.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
