--- a/BookOrganizer/packages.config
+++ b/BookOrganizer/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net45" />
+  <package id="WPFToolkit" version="3.5.50211.1" targetFramework="net45" />
 </packages>
